Fix bar getting hidden behind the name

--- a/src/js/components/iowa-widget/iowa-widget.less
+++ b/src/js/components/iowa-widget/iowa-widget.less
@@ -120,6 +120,7 @@ iowa-widget {
     .td.flourishes {
       padding: 0;
       padding-right: @flourish-margin;
+      z-index: 999;
 
       .mugshot {
         width: @mug-size;
